fixed collapsing nav items when tutorial is added

--- a/public/editor/stylesheets/editor.less
+++ b/public/editor/stylesheets/editor.less
@@ -714,6 +714,7 @@ body {
   .nav-container {
     min-width: 400px;
     padding: 0 16px 0 20px;
+	white-space: nowrap;
   }
 }
 
